<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright © 2018 Bicycle (Sébastien BALARD)

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sebastienbalard.bicycle.views.BICSplashActivity">

    <include layout="@layout/sb_widget_appbar_gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@color/bic_color_primary_dark">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/bic_ic_bike_24dp"
            android:layout_above="@id/textViewLogoText"
            android:layout_centerInParent="true"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewLogoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="56sp"
            android:textColor="@color/bic_color_white"
            android:textStyle="bold"
            android:text="@string/app_name"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewLogoText"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/bic_size_font_headline"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/bic_color_white"
            android:text="@string/bic_app_catching"/>

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/bic_color_white"
            android:indeterminate="true"
            android:layout_above="@id/textViewTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/bic_margin_half"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bic_color_white"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/textViewSubtitle"
            android:textSize="@dimen/bic_size_font_subhead"
            android:text="@string/bic_messages_info_init"
            tools:text="Configuration"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bic_color_white"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/bic_size_font_body"
            android:layout_marginBottom="@dimen/bic_margin_vertical_default"
            tools:text="523 villes disponibles"/>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
